changed index.html in serivce page

--- a/Service_page/index.html
+++ b/Service_page/index.html
@@ -27,7 +27,7 @@
                 </div>
                 <div class="card">
                     <i class="fa-solid fa-user-group"></i>
-                    <h2>Marketing And Reporting</h2>
+                    <h2>Testing</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, natus expedita aspernatur
                          assumenda incidunt tenetur error quas eveniet non nam.</p>
                 </div>
